--- a/src/Makefile
+++ b/src/Makefile
@@ -1,17 +1,15 @@
 all: clean
 
-part_1:
+parse:
 	python3 cache_wiki.py -p 'Erdős number'
 
-part_1_d:
-	python3 cache_wiki.py -p 'Erdős number' -d 10
 
 
-part_2:
+path:
 	python3 shortest_path.py -v --from 'Erdős number - Wikipedia' --to 'Alphabet - Wikipedia'
 
 
-part_3:
+graph:
 	python3 render_graph.py
 
 
